# FLAM-499

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp  gl_utils.h
app/src/main/java/com/example/edgedetectionapp/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/example/edgedetectionapp/native/: NativeLib.kt
app/src/main/java/com/example/edgedetectionapp/view/: GLRenderSurface.kt  GLTextureView.kt
app/src/main/res/drawable/: ic_camera.xml  ic_edge.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
web/: package-lock.json  package.json  server.ts  tsconfig.json
web/public/: index.html
web/src/: viewer.ts
